# BloopCAD

./: .gitignore  CMakeLists.txt  Planing.md  README.md  planing.md
Src/: BaseObject.hpp  Bloop.cpp  CMakeLists.txt  Main.cpp
Src/Actions/: Action.hpp  CMakeLists.txt  Makefile  cmake_install.cmake
Src/Bloop/: BaseObject.hpp  Bloop.cpp  Bloop.hpp  CMakeLists.txt
Src/ConstraintsSolver/: CMakeLists.txt  ConstrCluster.cpp  ConstrCluster.hpp  ConstrGraph.hpp  ConstrSyst.cpp  ConstrSyst.hpp  Constraint_abstr.cpp  Constraint_abstr.hpp  ConstraintsSystem.cpp  ConstraintsSystem.hpp  DraggedPoint.hpp  EquationsCluster.cpp  EquationsCluster.hpp  Expression.cpp  Expression.hpp  ExpressionVec.cpp  ExpressionVec.hpp  Expression_forward.hpp  SolverState.hpp
Src/ConstrsSolver/: CMakeLists.txt  ConstrCluster.cpp  ConstrCluster.hpp  ConstrGraph.hpp  ConstrSyst.cpp  ConstrSyst.hpp  Constraint.cpp  Constraint.hpp  Expression.cpp  Expression.hpp  Expression_forward.hpp  SolverState.hpp  SubstBlob.cpp  SubstBlob.hpp
Src/Drawables/: CMakeLists.txt
Src/Geometry/: CMakeLists.txt  Makefile  cmake_install.cmake
Src/Graphics_utils/: CMakeLists.txt  Camera.cpp  Camera.hpp  CameraState.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GLCall.cpp  GLCall.hpp  Image.cpp  Image.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Shader.cpp  Shader.hpp  ShadersPool.cpp  ShadersPool.hpp  Texture.cpp  Texture.hpp  TexturesPool.cpp  TexturesPool.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
Src/Tests/: CMakeLists.txt  TestConstraintsSolver_main.cpp
Src/Tools/: CMakeLists.txt  Tool.cpp  Tool.hpp  Tools_forward.hpp
Src/Utils/: Animatable.cpp  Animatable.hpp  CMakeLists.txt  Conversions_util.cpp  Conversions_util.hpp  Debug_util.hpp  Expunge.hpp  File_util.cpp  File_util.hpp  Maths_util.cpp  Maths_util.hpp  Param.hpp  Preferences.cpp  Preferences.hpp  Units_utils.hpp  XMLParser.cpp  XMLParser.hpp
Src/Workspaces/: CMakeLists.txt  Document.cpp  Document.hpp  DocumentTree.cpp  DocumentTree.hpp  EventsManager.cpp  EventsManager.hpp  Home_ws.cpp  Home_ws.hpp  MiscUI.cpp  MiscUI.hpp  NavigationBar.cpp  NavigationBar.hpp  Part_ws.cpp  Part_ws.hpp  Sketch_ws.cpp  Sketch_ws.hpp  TestFramework_eventsManager.cpp  TestFramework_eventsManager.hpp  Workspace_abstr.cpp  Workspace_abstr.hpp
src/: Bloop.cpp  Bloop.hpp  CMakeLists.txt  Forward_bloop.hpp  Main.cpp  animatable.hpp  baseObject.hpp  bloop.cpp  bloop.hpp  document.cpp  document.hpp  errorLogger.hpp  eventsManager.cpp  eventsManager.hpp  forward_bloop.hpp  main.cpp  navigationBar.cpp  navigationBar.hpp  preferences.cpp  preferences.hpp  testConstraintsSolver_main.cpp  testFramework_eventsManager.cpp  testFramework_eventsManager.hpp
src/Actions/: Action.hpp  CMakeLists.txt
src/ConstraintsSolver/: CMakeLists.txt  Constraint_abstr.hpp  ConstraintsSystem.cpp  ConstraintsSystem.hpp  DraggedPoint.hpp  EquationsCluster.cpp  EquationsCluster.hpp  Expression.cpp  Expression.hpp  ExpressionVec.cpp  ExpressionVec.hpp  Expression_forward.hpp  SolverState.hpp
src/Drawables/: CMakeLists.txt  Collection.cpp  Collection.hpp  Drawable.cpp  Drawable.hpp  Folder.cpp  Folder.hpp  Part.cpp  Part.hpp  Sketch.cpp  Sketch.hpp  Tangible.cpp  Tangible.hpp  entityView.cpp  entityView.hpp  folder.cpp  folder.hpp  part.cpp  part.hpp  sketch.cpp  sketch.hpp  svgEntity.hpp
src/Geom/: CMakeLists.txt
src/Geometry/: CMakeLists.txt
src/Graphics_utils/: CMakeLists.txt  Camera.cpp  Camera.hpp  FrameBuffer.cpp  GLCall.hpp  Shader.cpp  ShadersPool.cpp  Texture.cpp  TexturesPool.cpp  TexturesPool.hpp  VertexBufferLayout.hpp
src/Tests/: CMakeLists.txt  TestConstraintsSolver_main.cpp
src/Tools/: CMakeLists.txt  Tool.cpp  Tool.hpp
src/Utils/: Debug_util.hpp  File_util.cpp  XMLParser.cpp
src/Workspaces/: CMakeLists.txt  Document.cpp  Document.hpp  DocumentTree.cpp  EventsManager.cpp  EventsManager.hpp  Home_ws.cpp  Home_ws.hpp  NavigationBar.cpp  NavigationBar.hpp  Part_ws.cpp  Part_ws.hpp  Sketch_ws.cpp  Sketch_ws.hpp  TestFramework_eventsManager.cpp  Workspace_abstr.cpp  Workspace_abstr.hpp
src/actions/: CMakeLists.txt  action.cpp  action.hpp  switchWorkspace_action.cpp  switchWorkspace_action.hpp
src/constraintsSolver/: CMakeLists.txt  DR_planner.cpp  DR_planner.hpp  constraint.cpp  constraint.hpp  constraintCluster.cpp  constraintCluster.hpp  constraintSystem.cpp  constraintSystem.hpp  equationsCluster.cpp  equationsCluster.hpp  equationsSystem.cpp  equationsSystem.hpp  expression.cpp  expression.hpp  expressionVector.cpp  expressionVector.hpp  expressionVector2.cpp  expressionVector2.hpp  expressionVector3.cpp  expressionVector3.hpp  solverState.hpp
src/entities/: CMakeLists.txt  editable.hpp  entitiesIndexer.cpp  entitiesIndexer.hpp  entity.cpp  entity.hpp  entityView.cpp  entityView.hpp  folder.cpp  folder.hpp  forward_entities.hpp  geometricEntity.hpp  line.cpp  line.hpp  line_abstract.cpp  line_abstract.hpp  part.cpp  part.hpp  plane.cpp  plane.hpp  plane_abstract.cpp  plane_abstract.hpp  point.cpp  point.hpp  point_abstract.hpp  sketch.cpp  sketch.hpp  sketchPoint.hpp  svgEntity.hpp
src/geometry/: CMakeLists.txt  geometry_abstract.cpp  geometry_abstract.hpp
src/graphics_utils/: CMakeLists.txt  Camera.cpp  Camera.hpp  GLCall.cpp  GLCall.hpp  Image.cpp  IndexBuffer.cpp  Shader.cpp  Shader.hpp  ShadersPool.cpp  ShadersPool.hpp  Texture.cpp  TexturesPool.cpp  TexturesPool.hpp  VertexArray.hpp  VertexBufferLayout.cpp  camera.cpp  camera.hpp  frameBuffer.cpp  frameBuffer.hpp  indexBuffer.cpp  indexBuffer.hpp  shader.cpp  shader.hpp  shadersPool.cpp  shadersPool.hpp  vertexArray.cpp  vertexArray.hpp  vertexBuffer.cpp  vertexBuffer.hpp  vertexBufferLayout.cpp  vertexBufferLayout.hpp
src/tools/: CMakeLists.txt  tool.cpp  tool.hpp  tools_forward.hpp
src/utils/: CMakeLists.txt  DebugUtils.hpp  Expunge.hpp  animatable.cpp  animatable.hpp  conversionsUtils.cpp  conversionsUtils.hpp  errorLogger.hpp  fileUtils.cpp  fileUtils.hpp  mathUtils.cpp  mathUtils.hpp  preferences.cpp  preferences.hpp  xmlParser.cpp  (+1 more)
(+559 files in other folders)
