# add_executable(ConstraintsSolverTest
# 	testConstraintsSolver_main.cpp
# 	Document.cpp
# 	EventsManager.cpp
# 	testFramework_EventsManager.cpp
# 	Bloop.cpp
# 	)
# target_link_libraries(ConstraintsSolverTest
# 	vendor
# 	Utils
# 	Graphics_utils
# 	Drawables
# 	actions
# 	tools
# 	Workspaces
# 	${GTKMM_LIBRARIES}
# 	${CMAKE_DL_LIBS} epoxy)